Filtering is done on DB level in select itself
Filtering by latitude and longitude is included in
native SQL select in FoodTrucksRepository.
Function isPositionCloseToMe is deleted because it is
not needed anymore.
Tests are adjusted.